--- a/public/index.html
+++ b/public/index.html
@@ -8,13 +8,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>RentApp</title>
-  <script src="https://www.paypal.com/sdk/js?client-id=test&buyer- 
-      country=US&currency=USD&components=buttons&enable-funding=venmo"
-    data-sdk-integration-source="developer-studio"></script>
+<!-- <script src="https://www.paypal.com/sdk/js?client-id=ATCZfpst-K3roZX4HIlNemPQJGINi8fGGmrvu1o2C8LXfRfdcFh-7k7lnwuhfpHUyzmI0QufeQtjFq-M"></script> -->
 </head>
 
 <body>
   <div id="root"></div>
+  <script src="https://www.paypal.com/sdk/js?client-id=ATCZfpst-K3roZX4HIlNemPQJGINi8fGGmrvu1o2C8LXfRfdcFh-7k7lnwuhfpHUyzmI0QufeQtjFq-M"></script>
+
 </body>
 
 </html>
