--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>RentApp</title>
+  <title>DriveEase</title>
+  <link rel="icon" type="image/x-icon" href="https://i.postimg.cc/90CpZGKH/Screenshot-2024-07-06-201255-removebg-preview.png">
 <!-- <script src="https://www.paypal.com/sdk/js?client-id=ATCZfpst-K3roZX4HIlNemPQJGINi8fGGmrvu1o2C8LXfRfdcFh-7k7lnwuhfpHUyzmI0QufeQtjFq-M"></script> -->
 </head>
 
